tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/destinationrule/only_idletimeout_specified_in_DR/_test_context/DestinationRule.3504745088.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: idletimeout-dr
  namespace: echo-2-60257
spec:
  host: c
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 100s
    tls:
      mode: DISABLE
